<resources>
    <string name="sms_is_loading">Loading...</string>
    <string name="sms_has_deleted">Messages have been deleted</string>
    <string name="conversation_has_deleted">Conversations have been deleted</string>
    <string name="search_no_result">No search result</string>
    <string name="copyto_phone_done">Copy msg to phone have been done</string>
    <string name="copyto_phone_fail">"Copy failed, your phone can't support this function"</string>
    <string name="no_select_all">Cancel Select</string>
    <string name="gn_confirm_delete_all_messages">Are you sure you want to delete all messages?</string>
    <string name="gn_confirm_delete_messages">Are you sure you want to delete your selected messages?</string>
    <string name="add_to_favorite">Favorite message</string>
    <string name="cancel_favorite">Cancel favorite</string>
    <string name="tab_message">Messages</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_recommend">Recommend</string>
    <string name="tab_draft">Draft</string>
    <string name="tab_favorites_common_words">Common words</string>
    <string name="tab_favorites_msg_fav">Message favorites</string>
    <string name="gn_today">Today</string>
    <string name="gn_yesterday">Yesterday</string>
    <string name="gn_am">AM</string>
    <string name="gn_pm">PM</string>
    <string name="dial_dialog_title">Choose number to dial:</string>
    <string name="delete_all_threads">Delete all</string>
    <string name="repeat_send_msg">Resend</string>
    <string name="gn_send_msg_failed">Failed</string>
    <string name="gn_send_msg_received">Sent</string>
    <string name="aurora_has_no_attachment">Has no attachment!</string>
    <string name="aurora_saving_attachments">Saving</string>
    <string name="aurora_saving_error">Error happens when saving</string>
    <string name="aurora_saving_finished">Finished</string>
    <string name="aurora_storage_unavailable">Storage unvailable</string>
    <string name="aurora_image_saved">Images have been saved in \"Internal SD/DCIM/mms\" file</string>
    <string name="aurora_video_saved">Videoes have been saved in \"Internal SD/DCIM/mms\" file</string>
    <string name="aurora_other_saved">Audioes have been saved in \"Internal SD/Download\" file</string>
    <string name="gn_send_msg_sending">Sending...</string>
    <string name="aurora_send_fail_title">Sms send failed</string>
    <string name="add_recent_contacts">Add contact</string>
    <string name="insert_contacts">Insert contact</string>
    <string name="no_contacts">No contacts</string>
    <string name="no_recent_contacts">No recent contacts</string>
    <string name="title_add_receipents">Add contacts</string>
    <string name="group_list_empty">No groups.</string>
    <string name="select_group_contact_dlg_title">Select group contact</string>
    <string name="no_mobile_numbers">Has no mobile numbers</string>
    <string name="contact_has_no_info">Contact info is empty</string>
    <string name="no_phone_numbers">Has no phone numbers</string>
    <string name="video_call_not_enabled">Video call not enabled</string>
    <string name="unsaved">Unsaved</string>
    <string name="tab_recent_contact">Message</string>
    <string name="tab_contact">Contacts</string>
    <string name="tab_group_contact">Group</string>
    <string name="cancel">Cancel</string>
    <string name="contacts_notes">Notes:</string>
    <string name="contacts_website">Website:</string>
    <string name="contacts_name">Name:</string>
    <string name="delete_recent_contact">Delete</string>
    <string name="calllog">Call Log</string>
    <string name="groups_coworker">Co-worker</string>
    <string name="groups_family">Family</string>
    <string name="groups_friends">Friends</string>
    <string name="groups_schoolmate">Schoolmate</string>
    <string name="groups_vip">VIP</string>
    <string name="showAllGroups">All Contacts</string>
    <string name="sim">SIM</string>
    <string name="recommend_humor_joke">Humor joke</string>
    <string name="recommend_love_joke">Love joke</string>
    <string name="recommend_school_joke">School joke</string>
    <string name="recommend_birthday_message">Birthday message</string>
    <string name="insert_sd_card">Please Insert SD card!</string>
    <string name="repeat_send_msg_btn_text">Repeat</string>
    <string name="quick_text_header_text">New quick text</string>
    <string name="quick_text_header_text_edit">Edit quick text</string>
    <string name="quick_text_edit_hint">Input quick text</string>
    <string name="quick_text_menu_forward">Forward</string>
    <string name="quick_text_menu_edit">Edit</string>
    <string name="quick_text_menu_delete">Delete</string>
    <string name="add_quick_text_ok">OK</string>
    <string name="add_quick_text_cancel">Cancel</string>
    <string name="delete_quick_text_title">Delete</string>
    <string name="delete_quick_text_confirm">Are you sure to delete this message ?</string>
    <string name="delete_all_dratfs">Delete all</string>
    <string name="gn_cancel_all_favorite">Cancel all favorite</string>
    <string name="gn_selected">Selected</string>
    <string name="gn_exchange">eBackup</string>
    <string name="gn_mms_pop_setting_title">Information pop-up window notice</string>
    <string name="gn_mms_pop_setting_summary">Automatic popup window display information notice</string>
    <string name="pref_security_settings_title">Security Settings</string>
    <string name="pref_title_mms_encryption_setting">Setting session encryption</string>
    <string name="pref_summary_mms_encryption_setting">Use password encryption session</string>
    <string name="gn_phone_msg_count">Cell phone information statistics</string>
    <string name="gn_unread_msg_count">Unread messages:</string>
    <string name="gn_session_count">All threads:</string>
    <string name="gn_totle_msg_count">All messages:</string>
    <string name="gn_pref_title_sms_delivery_reports">Delivery Report</string>
    <string name="gn_pref_title_mms_read_reports">read report</string>
    <string name="gn_pref_title_mms_delivery_reports">Delivery Report</string>
    <string name="gn_pref_title_other">Others</string>
    <string name="gn_pref_title_accessories_signature">Signature</string>
    <string name="gn_pref_summary_accessories_signature">Automatic add for signature</string>
    <string name="gn_pref_title_edit_accessories_signature">Edit signature</string>
    <string name="gn_pref_summary_edit_accessories_signature">Tap to edit</string>
    <string name="gn_menu_doctoran">Prevent Disturb</string>
    <string name="gn_action_batch_operation">Batch operation</string>
    <string name="gn_action_encryption">Encryption box</string>
    <string name="gn_preference_displayOptions">PHOTO OPTIONS</string>
    <string name="gn_photo_style_options">Photo style options</string>
    <string name="gn_photo_style_options_default_value">1</string>
    <string name="gn_synchronizer">Gionee Cloud Backup</string>
    <string name="gn_pref_title_voice_setting">Voice Settings</string>
    <string name="gn_pref_title_voice_read">Voice reading</string>
    <string name="gn_pref_title_voice_read_detail">Increase read the item in the pop-up menu，Click it to read the current message</string>
    <string name="gn_pref_title_voice_input">Voice input</string>
    <string name="gn_pref_title_voice_input_detail">Long press the icon of New message to create voice messages</string>
    <string name="aurora_sms_center_summary">This number is just used for sending and receiving sms, Please confirm to your operator before you change it.</string>
    <string name="new_message">New message</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_all">Delete all threads</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="play">Play</string>
    <string name="restore_default">Restore default settings</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">Multimedia message (MMS) settings</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_sms_storage_title">Storage settings</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Status bar Notifications</string>
    <string name="pref_summary_notification_enabled">Display message notifications in status bar</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="pref_title_mms_enable_to_send_delivery_reports">Send delivery report</string>
    <string name="pref_summary_mms_enable_to_send_delivery_reports">Send a delivery report for each message you receive</string>
    <string name="sms_save_location">SMS storage location</string>
    <string name="sms_service_center">SMS Service Center</string>
    <string name="pref_title_mms_creation_mode">Creation Mode</string>
    <string name="pref_summary_mms_creation_mode">MMS creation mode for compose message</string>
    <string name="pref_title_mms_size_limit">Size Limit</string>
    <string name="pref_summary_mms_size_limit">MMS size limit for composing a message</string>
    <string name="pref_title_wappush_settings">Service Message Setting</string>
    <string name="pref_title_wappush_enable">Enable WAP PUSH</string>
    <string name="pref_summary_wappush_enable">Enable to receive WAP PUSH</string>
    <string name="pref_title_wappush_sl_autoloading">Auto-Launch SL</string>
    <string name="pref_summary_wappush_sl_autoloading">Automatically launch service loading(SL) message when received</string>
    <string name="menu_sim_sms">SIM SMS</string>
    <string name="mms_priority_label">"Priority "</string>
    <string name="select_all">Select all</string>
    <string name="pref_title_storage_status">Current storage usage</string>
    <string name="pref_title_mms_auto_reply_read_reports">Send read report</string>
    <string name="pref_summary_mms_auto_reply_read_reports">Send a read report if requested by the MMS sender</string>
    <string name="sms_input_mode_title">Input mode</string>
    <string name="sms_input_mode_dialog_title">Select input mode</string>
    <string name="sms_input_mode_summary">SMS input mode for compose message</string>
    <string name="pref_title_io_settings">Import/Export SMS</string>
    <string name="sms_forward_setting">SMS Forward Setting</string>
    <string name="sms_forward_setting_summary">"Forward SMS with sender's name and number"</string>
</resources>