<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.AudioAttachmentView android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/audio_attachment_view" android:background="@drawable/attachment_editor_bg" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/audio_image" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_attach_capture_audio_holo_light" />
            <TextView android:id="@id/audio_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@id/album_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@id/artist_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="@drawable/text_color_red" android:id="@id/audio_error_msg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView android:id="@id/drm_lock" android:paddingLeft="3.0dip" android:paddingTop="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        <TextView android:textSize="11.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/media_size_info" android:background="#88000000" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <aurora.widget.AuroraButton android:textColor="@android:color/black" android:id="@id/play_audio_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/play" style="?android:attr/buttonStyleSmall" />
        <aurora.widget.AuroraButton android:textColor="@android:color/black" android:id="@id/replace_audio_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/replace" style="?android:attr/buttonStyleSmall" />
        <aurora.widget.AuroraButton android:textColor="@android:color/black" android:id="@id/remove_audio_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/remove" style="?android:attr/buttonStyleSmall" />
    </LinearLayout>
</com.android.mms.ui.AudioAttachmentView>